--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,14 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
-  fl_chart: ^0.70.2
+  fl_chart: ^0.65.0
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.6.0
   flutter_svg: ^2.0.17
   responsive_framework: ^1.5.1
+  intl: ^0.18.1
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
