--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   responsive_framework: ^1.5.1
   intl: ^0.18.1
   carousel_slider: ^5.0.0
+  flutter_bloc: ^9.0.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
