--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,11 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.0
   flutter_svg: ^2.0.17
   responsive_framework: ^1.5.1
-  intl: ^0.18.1
+  intl: 
   carousel_slider: ^5.0.0
   flutter_bloc: ^9.0.0
+  go_router: ^14.7.2
+  device_preview: ^1.0.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
