--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,13 @@ dependencies:
   fl_chart: ^0.65.0
   flutter:
     sdk: flutter
-  flutter_staggered_grid_view: ^0.6.0
   flutter_svg: ^2.0.17
-  responsive_framework: ^1.5.1
-  intl: 
+  intl:
   carousel_slider: ^5.0.0
   flutter_bloc: ^9.0.0
   go_router: ^14.7.2
   device_preview: ^1.0.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_lints: ^4.0.0
